# dayz-monitor

./: .drovah  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
