[package]
name = "dayz_time_rs"
version = "0.1.0"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
dotenv = "0.15.0"
once_cell = "1.5.2"
async-rwlock = "1.3.0"

[dependencies.serenity]
version = "0.9.0"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]